frontend_tests/negative/builtin_min_type_mismatch/go.mod
module example.com/builtin-min-type-mismatch

go 1.21
